--- a/src/main/resources/templates/GetAll.html
+++ b/src/main/resources/templates/GetAll.html
@@ -19,7 +19,7 @@
             </p>
         </div>
         <div class="col-sm-4 text-center">
-            <a class="btn btn-success" th:href="@{/Usuario/Form}">Agregar</a>
+            <a class="btn btn-success" th:href="@{/Usuario/form}">Agregar</a>
         </div>
     </div>
 
