--- a/src/main/resources/templates/GetAll.html
+++ b/src/main/resources/templates/GetAll.html
@@ -7,8 +7,32 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+    <style>
+        .gradient-custom {
+            background: linear-gradient(
+                90deg,
+                rgba(2, 0, 36, 1) 0%,
+                rgba(9, 9, 121, 1) 35%,
+                rgba(0, 212, 255, 1 ) 100%
+            );
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+
+        .form-check-input {
+            background-color: #212529;
+            border: 2px solid #6c757d;
+        }
+
+        .form-check-input:checked {
+            background-color: #0d6efd;
+            border-color: #0d6efd;
+        }
+    </style>
+
 </head>
-<body>
+<body class="gradient-custom">
 
 <div class="container mt-4">
 
