--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -8,16 +8,40 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
+    <style>
+        .gradient-custom {
+            background: linear-gradient(
+                90deg,
+                rgba(2, 0, 36, 1) 0%,
+                rgba(9, 9, 121, 1) 35%,
+                rgba(0, 212, 255, 1 ) 100%
+            );
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+
+        .form-check-input {
+            background-color: #212529;
+            border: 2px solid #6c757d;
+        }
+
+        .form-check-input:checked {
+            background-color: #0d6efd;
+            border-color: #0d6efd;
+        }
+    </style>
+
+
 </head>
 
-<body class="bg-light">
+<body class="gradient-custom">
 
 <div class="container py-5">
 
     <div class="row justify-content-center">
         <div class="col-lg-10 col-md-12">
 
-            <div class="card shadow-lg rounded-4 border-0">
+            <div class="card shadow-lg rounded-4 border-0 bg-light  ">
                 <div class="card-header bg-primary text-white text-center fw-bold py-3 rounded-top-4">
                     <h4 class="mb-0">Registro de Usuario</h4>
                     <small class="opacity-75">Complete la información requerida</small>
@@ -28,7 +52,7 @@
                     <form method="post" th:object="${usuario}" th:action="@{/Usuario/form}">
 
                     
-                        <h5 class="text-primary border-bottom pb-2 mb-3">
+                        <h5 class="text-white border-bottom pb-2 mb-3">
                             Datos personales
                         </h5>
 
@@ -65,24 +89,49 @@
                                 <span id="errorFechaNacimiento" th:if="${#fields.hasErrors('fechaNacimiento')}" th:errors="*{fechaNacimiento}" style="color:red"></span>
                             </div>
 
+
                             <div class="col-md-6">
-                                <label for="Sexo d-block" class="fw-bold">Sexo</label>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="sexo"
-                                           id="sexoM" value="M"
-                                           th:checked="*{sexo == 'M'}" required>
-                                    <label class="form-check-label" for="sexoM">Masculino</label>
+                                <label class="fw-bold d-block mb-3">Sexo</label>
+
+                                <div class="d-flex gap-4">
+
+                                    <div class="form-check">
+                                        <input class="form-check-input fs-5"
+                                            type="radio"
+                                            name="sexo"
+                                            id="sexoM"
+                                            value="M"
+                                            th:checked="*{sexo == 'M'}"
+                                            required>
+
+                                        <label class="form-check-label fw-semibold ms-1"
+                                            for="sexoM">
+                                            Masculino
+                                        </label>
+                                    </div>
+
+                                    <div class="form-check">
+                                        <input class="form-check-input fs-5"
+                                            type="radio"
+                                            name="sexo"
+                                            id="sexoF"
+                                            value="F"
+                                            th:checked="*{sexo == 'F'}">
+
+                                        <label class="form-check-label fw-semibold ms-1"
+                                            for="sexoF">
+                                            Femenino
+                                        </label>
+                                    </div>
+
                                 </div>
 
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="sexo"
-                                           id="sexoF" value="F"
-                                           th:checked="*{sexo == 'F'}">
-                                    <label class="form-check-label" for="sexoF">Femenino</label>
+                                <div class="invalid-feedback d-block">
+                                    <span th:if="${#fields.hasErrors('sexo')}"
+                                        th:errors="*{sexo}"></span>
                                 </div>
-                                <small id="errorSexo"></small>
-                                <span id="errorSexo" th:if="${#fields.hasErrors('sexo')}" th:errors="*{sexo}" style="color:red"></span>
                             </div>
+
 
                             <div class="col-md-3">
                                 <label for="Teléfono" class="form-label fw-bold">Teléfono</label>
@@ -124,14 +173,15 @@
                         </div>
 
                         <div class="card mt-4 shadow-sm border-0">
-                            <div class="card-header bg-secondary text-white fw-bold">
+                            <div class="card-header bg-danger text-white">
                                 Direcciones
                             </div>
 
-                            <div class="card-body">
+                            <div class="card-body bg-warning">
 
                                 <div th:each="direccion, iterStat : *{direccion}" 
                                     class="row g-3 mb-4 pb-3 border-bottom">
+                                    
 
                                     <div class="col-md-4">
                                         <label for="calle" class="form-label fw-bold">Calle</label>
@@ -151,7 +201,7 @@
                                         <span id="errorNumeroExterior" th:if="${#fields.hasErrors('direccion[__${iterStat.index}__].numeroExterior')}" th:errors="*{direccion[__${iterStat.index}__].numeroExterior}" style="color:red"></span>
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-md-4">
                                         <label for="paisddl" class="form-label fw-bold">País</label>
                                         <select class="form-select"
                                                 id="ddlpais"
@@ -178,6 +228,7 @@
                                         </select>
                                     </div>
                                     
+                                    
                                     <div class="col-md-3">
                                         <label for="coloniaddl" class="form-label fw-bold">Colonia</label>
                                         <select id="ddlcolonia" class="form-select " aria-label="Default select example" >
@@ -193,7 +244,7 @@
                                     
                                 </div>
 
-                                <button type="button" class="btn btn-outline-primary">
+                                <button type="button" class="btn btn-primary">
                                     + Agregar Dirección
                                 </button>
 
