--- a/src/main/resources/templates/GetAll.html
+++ b/src/main/resources/templates/GetAll.html
@@ -36,12 +36,16 @@
 
 <div class="container mt-4">
 
-    <div class="row mb-3 align-items-center">
-        <div class="col-sm-8">
-            <p class="fw-bold fs-5 text-dark text-center">
-                Presiona el botón si quieres agregar un nuevo usuario
+        <div class="row mb-3 align-items-center">
+                <div class="col-sm-8 text-center">
+            <h2 class="fw-bold text-white mb-2">
+                Nuevo Usuario
+            </h2>
+            <p class="text-white-50 mb-0">
+                Registra un nuevo usuario en el sistema
             </p>
         </div>
+
         <div class="col-sm-4 text-center">
             <a class="btn btn-success" th:href="@{/Usuario/form}">Agregar</a>
         </div>
