--- a/src/main/resources/static/css/usuario.css
+++ b/src/main/resources/static/css/usuario.css
@@ -18,3 +18,7 @@
     background-color: #0d6efd;
     border-color: #0d6efd;
 }
+
+.foto-wrapper img {
+    transition: opacity 0.3s ease-in-out;
+}
