--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -41,8 +41,8 @@
 
                                 <label class="form-label fw-bold d-block">Foto de Perfil</label>
 
-                                <div class="position-relative d-inline-block overflow-hidden rounded-circle"
-                                    style="width:150px; height:150px;">
+                                <div class="foto-wrapper rounded-circle overflow-hidden position-relative mx-auto"
+                                    style="width:150px; height:150px; background:#f8f9fa;">
 
                                     <img id="previewFoto"
                                         th:if="*{foto != null}"
@@ -52,21 +52,24 @@
 
                                     <div id="iconoDefault"
                                         th:if="*{foto == null}"
-                                        class="d-flex align-items-center justify-content-center w-100 h-100"
-                                        style="background-color:#f8f9fa;">
-                                        <i class="bi bi-person-bounding-box" style="font-size:80px; color:#6c757d;"></i>
+                                        class="d-flex align-items-center justify-content-center w-100 h-100">
+                                        <i class="bi bi-person-bounding-box"
+                                        style="font-size:80px; color:#6c757d;"></i>
                                     </div>
 
                                 </div>
 
-
                                 <div class="mt-3">
-                                    <input type="file" id="foto" name="foto"
+                                    <input type="file"
+                                        id="foto"
+                                        name="foto"
                                         class="form-control"
                                         accept="image/*">
                                 </div>
 
                             </div>
+
+
 
                             <div class="col-md-4">
                                 <label for="NombreUsuario" class="form-label fw-bold">Nombre</label>
